<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.StudentFragment">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="60sp"
      android:gravity="center"
      android:text="@string/student_registration_form"
      android:textSize="25sp" />
  <EditText
      android:id="@+id/firstName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="130sp"
      android:layout_marginTop="40sp"
      android:autofillHints="name"
      android:gravity="center"
      android:hint="@string/enter_first_name"
      android:inputType="textPersonName" />
    <EditText
        android:id="@+id/secondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130sp"
        android:layout_marginTop="80sp"
        android:autofillHints="name"
        android:gravity="center"
        android:hint="@string/enter_second_name"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/rollNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150sp"
        android:layout_marginTop="120sp"
        android:autofillHints="phone"
        android:gravity="center"
        android:hint="@string/enter_roll_no"
        android:inputType="numberSigned" />
    <EditText
        android:id="@+id/contactNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120sp"
        android:layout_marginTop="160sp"
        android:autofillHints="phone"
        android:gravity="center"
        android:hint="@string/enter_contact_number"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150sp"
        android:layout_marginTop="200sp"
        android:autofillHints="postalAddress"
        android:gravity="center"
        android:hint="@string/enter_address"
        android:inputType="textPostalAddress" />
    <Button
        android:id="@+id/registerStudentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300sp"
        android:layout_marginStart="160sp"
        android:text="@string/submit"
        android:textSize="20sp"
        />
</FrameLayout>